default 'yank' that works on linux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,8 +41,13 @@ bind P paste-buffer
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi V send-keys -X select-line
 # Use the following if you don't want to send to system buffer:
+
 # bind-key -T copy-mode-vi y send-keys -X copy-selection
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'pbcopy'
+# on mac
+# bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'pbcopy'
+# on linux (make sure 'xclip' is installed!)
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
 # number windows and panes starting with 1
